[metadata]
name = baserow
version = 0.0.1
author = Tan Li
author_email = tanl@workshop.cool
description = A python client for interacting with baserow API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/WorkshopHQ/baserow-client
project_urls =
    Bug Tracker = https://github.com/WorkshopHQ/baserow-client/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    markdown
    typer
    rich

[options.extras_require]
dev =
    pytest
    black
    isort
    flake8

[options.packages.find]
where = src
